{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 88,
  "lineage": "9f79c520-8a73-4ae6-aed5-18b8cd97cebb",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:security-group/sg-0ad295a67d41b7411",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ad295a67d41b7411",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0212c2766cc59a902"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "DE000079-eks-dev-cluster-20250904180003769000000005",
            "name_prefix": "DE000079-eks-dev-cluster-",
            "owner_id": "234139188789",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-eks-dev-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-eks-dev-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "sg-0ad295a67d41b7411",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:security-group/sg-0212c2766cc59a902",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0212c2766cc59a902",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad295a67d41b7411"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad295a67d41b7411"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad295a67d41b7411"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad295a67d41b7411"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad295a67d41b7411"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad295a67d41b7411"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "DE000079-eks-dev-node-20250904180003767300000004",
            "name_prefix": "DE000079-eks-dev-node-",
            "owner_id": "234139188789",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-eks-dev-node",
              "Terraform": "true",
              "kubernetes.io/cluster/DE000079-eks-dev": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-eks-dev-node",
              "Terraform": "true",
              "kubernetes.io/cluster/DE000079-eks-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "sg-0212c2766cc59a902",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4105946813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0ad295a67d41b7411",
            "security_group_rule_id": "sgr-0f290429e072ba0fb",
            "self": false,
            "source_security_group_id": "sg-0212c2766cc59a902",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1680787531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-0dc1ca9d9a0c02095",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2937733474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-0cde3041c94eac5c1",
            "self": false,
            "source_security_group_id": "sg-0ad295a67d41b7411",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1563570502",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-05352a14f3b594023",
            "self": false,
            "source_security_group_id": "sg-0ad295a67d41b7411",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2490390224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-01da081e495b59f22",
            "self": false,
            "source_security_group_id": "sg-0ad295a67d41b7411",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2267835121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-044e278c2e997e97a",
            "self": false,
            "source_security_group_id": "sg-0ad295a67d41b7411",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3817691450",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-03423589ac1b79b68",
            "self": false,
            "source_security_group_id": "sg-0ad295a67d41b7411",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1203340410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-0e3aad5393442610a",
            "self": false,
            "source_security_group_id": "sg-0ad295a67d41b7411",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3199366355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-0bc81dbfeac3c22de",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1961581132",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-06e07125b006aca55",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3501521315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0212c2766cc59a902",
            "security_group_rule_id": "sgr-00f939e8503bcbb72",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.networking.module.vpc.aws_vpc_block_public_access_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_caller_identity.current",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_partition.current",
            "module.networking.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.eks_managed_node_group[\"default\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks.module.eks.module.eks_managed_node_group[\"default\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.eks_managed_node_group[\"default\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.eks_managed_node_group[\"default\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:network-acl/acl-0da7f1805fe5bc11f",
            "default_network_acl_id": "acl-0da7f1805fe5bc11f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0da7f1805fe5bc11f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "234139188789",
            "region": "ap-southeast-2",
            "subnet_ids": [
              "subnet-008bde8f553ceba93",
              "subnet-00c8d27ee94f6af0e",
              "subnet-07e3adea15c82f1a8",
              "subnet-07fd67b00bc127ab8",
              "subnet-099d6b3f4ad4ee462",
              "subnet-0b0ccacd340526b58"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:route-table/rtb-0c5370455e6dfc7b0",
            "default_route_table_id": "rtb-0c5370455e6dfc7b0",
            "id": "rtb-0c5370455e6dfc7b0",
            "owner_id": "234139188789",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:security-group/sg-0e104cdf00d6fbdf3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e104cdf00d6fbdf3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "234139188789",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0048ab6478b8c0da8",
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:elastic-ip/eipalloc-0048ab6478b8c0da8",
            "association_id": "eipassoc-070652e74c2ff95e7",
            "domain": "vpc",
            "id": "eipalloc-0048ab6478b8c0da8",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-034004095acc24957",
            "private_dns": "ip-10-0-101-163.ap-southeast-2.compute.internal",
            "private_ip": "10.0.101.163",
            "public_dns": "ec2-3-105-180-144.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.105.180.144",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01555b7b388d42132",
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:elastic-ip/eipalloc-01555b7b388d42132",
            "association_id": "eipassoc-0a3aef6e3eeb8e4a5",
            "domain": "vpc",
            "id": "eipalloc-01555b7b388d42132",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0d827e9931177721d",
            "private_dns": "ip-10-0-102-187.ap-southeast-2.compute.internal",
            "private_ip": "10.0.102.187",
            "public_dns": "ec2-3-104-44-22.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.44.22",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2b",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e9ea50e8219f0b8",
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:elastic-ip/eipalloc-06e9ea50e8219f0b8",
            "association_id": "eipassoc-0ee050381928fc8f7",
            "domain": "vpc",
            "id": "eipalloc-06e9ea50e8219f0b8",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-041d95ba6bcdcb859",
            "private_dns": "ip-10-0-103-254.ap-southeast-2.compute.internal",
            "private_ip": "10.0.103.254",
            "public_dns": "ec2-13-55-94-221.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.55.94.221",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2c",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:internet-gateway/igw-0f3071b95253af455",
            "id": "igw-0f3071b95253af455",
            "owner_id": "234139188789",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0048ab6478b8c0da8",
            "association_id": "eipassoc-070652e74c2ff95e7",
            "connectivity_type": "public",
            "id": "nat-03927e7179b2ac731",
            "network_interface_id": "eni-034004095acc24957",
            "private_ip": "10.0.101.163",
            "public_ip": "3.105.180.144",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07fd67b00bc127ab8",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01555b7b388d42132",
            "association_id": "eipassoc-0a3aef6e3eeb8e4a5",
            "connectivity_type": "public",
            "id": "nat-03d3c92569f42d713",
            "network_interface_id": "eni-0d827e9931177721d",
            "private_ip": "10.0.102.187",
            "public_ip": "3.104.44.22",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b0ccacd340526b58",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2b",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e9ea50e8219f0b8",
            "association_id": "eipassoc-0ee050381928fc8f7",
            "connectivity_type": "public",
            "id": "nat-03650f6d4e792bf1e",
            "network_interface_id": "eni-041d95ba6bcdcb859",
            "private_ip": "10.0.103.254",
            "public_ip": "13.55.94.221",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e3adea15c82f1a8",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-ap-southeast-2c",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07d1034075b74b5091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03927e7179b2ac731",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07d1034075b74b509",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07d1034075b74b509"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0352295d312eff9441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03d3c92569f42d713",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0352295d312eff944",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0352295d312eff944"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff017baaab5225d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03650f6d4e792bf1e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0ff017baaab5225d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0ff017baaab5225d5"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f3071b95253af455",
            "id": "r-rtb-06ecc0610ffffcd411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-06ecc0610ffffcd41",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-06ecc0610ffffcd41"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:route-table/rtb-07d1034075b74b509",
            "id": "rtb-07d1034075b74b509",
            "owner_id": "234139188789",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03927e7179b2ac731",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "rtb-07d1034075b74b509",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:route-table/rtb-0352295d312eff944",
            "id": "rtb-0352295d312eff944",
            "owner_id": "234139188789",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d3c92569f42d713",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "rtb-0352295d312eff944",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:route-table/rtb-0ff017baaab5225d5",
            "id": "rtb-0ff017baaab5225d5",
            "owner_id": "234139188789",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03650f6d4e792bf1e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "rtb-0ff017baaab5225d5",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:route-table/rtb-06ecc0610ffffcd41",
            "id": "rtb-06ecc0610ffffcd41",
            "owner_id": "234139188789",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3071b95253af455",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "rtb-06ecc0610ffffcd41",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f3575575001c17d",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07d1034075b74b509",
            "subnet_id": "subnet-099d6b3f4ad4ee462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018439e12f9dda9e7",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0352295d312eff944",
            "subnet_id": "subnet-00c8d27ee94f6af0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c20fc16d1a2a07",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0ff017baaab5225d5",
            "subnet_id": "subnet-008bde8f553ceba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed38c4f39416fe60",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-06ecc0610ffffcd41",
            "subnet_id": "subnet-07fd67b00bc127ab8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd46bd07eb99eb1c",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-06ecc0610ffffcd41",
            "subnet_id": "subnet-0b0ccacd340526b58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a72016fef7de8dc9",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-06ecc0610ffffcd41",
            "subnet_id": "subnet-07e3adea15c82f1a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:subnet/subnet-099d6b3f4ad4ee462",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099d6b3f4ad4ee462",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234139188789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "subnet-099d6b3f4ad4ee462",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:subnet/subnet-00c8d27ee94f6af0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c8d27ee94f6af0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234139188789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "subnet-00c8d27ee94f6af0e",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:subnet/subnet-008bde8f553ceba93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008bde8f553ceba93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234139188789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "subnet-008bde8f553ceba93",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:subnet/subnet-07fd67b00bc127ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fd67b00bc127ab8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234139188789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public-ap-southeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "subnet-07fd67b00bc127ab8",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:subnet/subnet-0b0ccacd340526b58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0ccacd340526b58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234139188789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public-ap-southeast-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "subnet-0b0ccacd340526b58",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:subnet/subnet-07e3adea15c82f1a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e3adea15c82f1a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234139188789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev-public-ap-southeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09b36e6db896be6e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "234139188789",
            "id": "subnet-07e3adea15c82f1a8",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:234139188789:vpc/vpc-09b36e6db896be6e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da7f1805fe5bc11f",
            "default_route_table_id": "rtb-0c5370455e6dfc7b0",
            "default_security_group_id": "sg-0e104cdf00d6fbdf3",
            "dhcp_options_id": "dopt-05685d99e165325df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09b36e6db896be6e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5370455e6dfc7b0",
            "owner_id": "234139188789",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DE000079-vpc-dev",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}